--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -982,7 +982,7 @@ table .traficc-source-input input[type="checkbox"]{
 /*    width: 78%;
     float: left;*/
 }
-.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:20px;width:20px;height:20px;display:block;float:left;margin:4px 0 0 0;}
+.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:20px;width:20px;height:20px;display:block;float:left;margin:0 0 0 -17px;}
 .report .right-select{
     float: right;
 }
