--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2978,6 +2978,19 @@ md-content.md-default-theme, md-content{color:#000;}
     transition: color 300ms ease-in-out;}
 .md-button.md-primary.md-raised.green-btn i{margin-right:5px;}
 .btn.btn-primary.blue-btn{padding:0 12px;font-weight:bold;font-size:13px;}
+.right-select .cs-add-button.blue-btn[disabled]{
+    background: #a09b9b !important;
+    border: 1px solid #868484 !important;
+}
+.ts-time{
+    padding: 0 5px;
+    border: 1px solid #c9c9cf!important;
+    border-radius: 3px;
+    background: #fff;
+    min-width: 82px;
+    height: 32px;
+    line-height: 30px;
+}
 .blue-btn.apply-change-btn.apply-btn{
     background: #16a919 !important;
     border:1px solid #16a919 !important;
