--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -289,7 +289,7 @@ header .home:hover{
     height: 30px;
 }
 md-select{margin:0;}
-md-select.md-table-select{min-width:auto;}
+md-select.md-table-select{min-width:100%;}
 md-select .md-select-value,md-select.md-table-select > .md-select-value{
     padding: 0 5px;
     border:1px solid #c9c9cf !important;
@@ -632,6 +632,7 @@ table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-
     background: linear-gradient(to bottom, #f8f8f8 0, #e9e9e9 100%);
     color:#000;font-weight:bold;}
 .md-table tfoot.md-body{line-height:20px;border-top:1px solid #d7d7d7;}
+.md-table tfoot.md-body td{border-right:1px solid #d7d7d7;}
 table.md-table th.md-column {
     border-right:1px solid #d7d7d7;
 }
@@ -641,7 +642,7 @@ table.md-table thead.md-head > tr.md-row{
     height: auto;
 }
 table.md-table td.md-cell{
-    border-bottom: 1px solid #eaeaea;
+    border-left: 1px solid #eaeaea;
     border-top: none;font-size:12px;
 }
 table.md-table tbody{border-top:1px solid #ccc;}
@@ -651,12 +652,13 @@ table.md-table tbody tr:hover {
 table.md-table tbody.md-body > tr.md-row:hover td.md-cell{color:#fff;}
 table.md-table tbody.md-body > tr.md-row:hover, table.md-table tfoot.md-foot > tr.md-row:hover{background:#8494a2;}
 table tbody tr{background: #fff;}
-table tbody tr:nth-child(2n+2){background:#f5f5f5;border-width:1px 0 1px 0;border-color:#ededed;border-style:solid;}
 
-table{border-radius:3px 3px 0 0;float:left;width:100%;height:auto;}
-md-table-container {overflow-y:auto;border-radius:0 0 3px 3px;float:left;width:100%;background: rgb(241, 242, 247);min-height: 100px;}
-/*.table-box{border:1px solid #d7d7d7;border-radius:3px;width:100%;float:left;height: 94%;}*/
-.table-box{border:1px solid #d7d7d7;}
+table tbody tr:nth-child(2n+2){background:#fff;border-width:1px 0 1px 0;border-color:#ededed;border-style:solid;}
+table.md-table:not(.md-row-select) td.md-cell:first-child, table.md-table:not(.md-row-select) th.md-column:first-child{padding:4px 10px 0 10px;}
+table{border-radius:0;float:left;width:100%;height:auto;}
+md-table-container {overflow-y:auto;border-radius:0;float:left;width:100%;background:#f6f8f8;min-height: 100px;}
+.table-box{border:1px solid #d7d7d7;border-radius:3px;width:100%;float:left;height: 94%;}
+
 .md-table-pagination{color:#000;}
 .md-table-pagination .label {
     font-size: 12px;
@@ -2130,7 +2132,7 @@ input[type="checkbox"].th-checkbox{
     to { transform: scale(1) rotate(360deg);}
 }
 .form-content{
-    max-width:auto;
+    max-width:100%;
 }
 .editRuleForm .label-name{
     display: block;
