network offer detail css

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3177,6 +3177,6 @@ table.md-table tr.row-deleted td.md-cell {
 
 .col-sm-offset-2 textarea {
     margin: 0px;
-    width: 834px;
+    width: 85%;
     height: 516px;
 }
