--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2198,6 +2198,23 @@ md-content.cs-main-content{
     position: absolute;
     background: #fff;
 }
+.cs-action-bar-bg .masking{
+    position: absolute;
+    background: rgba(255, 255, 255, 0.4);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    z-index: 99;
+}
+.cs-action-bar-bg md-progress-circular{
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -25px;
+}
 .editPathForm .row,
 .editRuleForm .row{
     margin:15px 0;
