NB-431 报表加载的进度条，当下拉框不是滚动到最顶端的时候，是看不到的

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2157,6 +2157,11 @@ input[type="checkbox"].th-checkbox{
 md-content.cs-main-content{
     height: calc(100% - 93px);
 }
+.table-box md-progress-linear{
+    position: fixed;
+    width: calc(100% - 30px);
+    top: auto !important;
+}
 .cs-page-flow,
 .cs-flow-content{
     height: 100%;
