table header width 100%

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -9,6 +9,7 @@
 .item-name {
   min-width: 350px !important;
   max-width: 350px !important;
+  width: 350px !important;
 }
 
 .item-name a, .item-name span {
