--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3406,3 +3406,13 @@ table.md-table tr.row-deleted td.md-cell {
 .repeater-container tr:hover .drilldown-tag {
   display: inline-block;
 }
+.fraud-filter-edit-dialog .frequency input {
+  width: 99px;float: left;
+}
+.fraud-filter-edit-dialog .frequency span.msg {
+  float: left; height: 32px; line-height: 32px; padding: 0 15px;
+}
+.fraud-filter-edit-dialog .condition-select {
+  width: 110px;
+  margin-left: 0;
+}
