--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -1,14 +1,18 @@
-body{font-family:Avenir Next,Roboto-Regular,Helvetica, Verdana,Tahoma, Arial, "\5b8b\4f53", sans-serif;background:#fbfbfb;}
+body{font-family:"Avenir Next","Roboto-Regular","PingFang",Helvetica, Verdana,Tahoma, Arial, "\5b8b\4f53", sans-serif;background:#fbfbfb;}
 *{margin:0;padding:0;list-style:none;}
 @font-face {
     font-family:"Roboto-Regular"! important;
     src:url("../font/Roboto-Regular.ttf");
 }
+@font-face {
+    font-family:"PingFang"! important;
+    src:url("../font/PingFang.ttc");
+}
 a{color:#222;}
 .container{max-width:1100px;}
 h1,h2,h3,h4,h5,h6,p{margin:0;}
 a,a:hover,a:focus{text-decoration:none;}
-.nav-w{width:90%;margin:0 auto;}
+.nav-w{width:90%;margin:0 auto;position:absolute}
 .nav-box img{float:left;width:68px;}
 #menu3{float:right;margin-top:25px;}
 .nav-col{
@@ -53,10 +57,11 @@ header {font-family:Helvetica;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
+    text-align:center;
     width: 100%;
     height:85vh;
     background:url("../img/banner.png") no-repeat;
-    background-size:100%;
+    background-size:100%;float:left;
 }
 .title {
     -webkit-align-self: center;
@@ -97,8 +102,9 @@ header {font-family:Helvetica;
     opacity: 0;
     top: -100px;
     padding-bottom: 6px;
+    left:0;
 }
-
+.nav-w{left:6%;}
 .open-nav {
     max-height: 400px !important;
 }
@@ -349,7 +355,7 @@ nav ul li:hover {
 .free-top{height:192px;padding-top:60px;}
 .free-top h4{font-size:38px;}
 .free-top p{font-size:13px;margin-top:6px;}
-.free-list{padding:20px 0;}
+.free-list{padding:65px 0;}
 .free-list i{color:#009800;}
 .free-btn{background-image: linear-gradient(to right, #049d04 0%, #008e00 100%);}
 input:focus{outline:0;}
@@ -463,8 +469,46 @@ footer h4{font-size:13px;color:#777;margin:15px 0;}
 @media only screen and (max-width:500px) {
     .pricing-col li{width:100%;margin-bottom:10px;}
 
-
 }
 
+.free-active{background-image: linear-gradient(to right, #357cf4 0%, #2564cf 100%);
+    text-align:center;color:#fff;font-family:"Avenir Next";padding:0 0 40px 0;border-bottom:1px solid #0055bf;
+}
+.free-active-col{padding:30px 0 15px 0;}
+.free-active-col p{font-size:32px;font-weight:500;line-height:38px;}
+.free-active-col p b{font-size:44px;color:#f6ff00;font-weight:600;}
+.free-active-col p.free-small{font-size:26px;}
+.time{border-top:1px solid #2564cf;border-bottom:1px solid #2564cf;width:230px;margin:0 auto;height:46px;line-height:48px;font-size:20px;}
+.time b{font-weight:600;background:#2564cf;padding:3px 10px 0 10px;border-radius:3px;color:#f6ff00;}
+.free-trial-btn a{background-image: linear-gradient(to right, #049d04 0%, #008e00 100%);
+    height:32px;line-height:32px;padding:0 15px;display:block;color:#fff;border-radius:3px;}
 
-
+.free-teaser{max-width:960px;margin:55px auto;font-family:"PingFang";color:#222;}
+.free-teaser h1{font-weight:500;font-size:31px;display:block;}
+.free-teaser h1 b{color:#e70000;font-weight:700;}
+.free-font-top{background:#f3f3f3;padding:15px 25px;border-radius:3px;line-height:28px;margin-top:30px;font-size:14px;}
+.free-title{margin:30px 0;width:100%;float:left;}
+.free-title h2{font-size:22px;font-weight:400;float:left;line-height:44px;}
+.free-title-btn{background-image:linear-gradient(to right, #049d04 0%, #008e00 100%);font-size:18px;font-weight:300;color:#fff;
+    height:44px;line-height:44px;padding:0 30px;display:block;color:#fff;border-radius:3px;border:none;float:right;
+}
+.free-teaser-list-top{border:1px solid #ddd;float:left;width:100%;border-radius:3px 3px 0 0;margin:0;}
+.free-teaser-list-top li{border-bottom:1px solid #eee;padding:15px 20px;}
+.free-teaser-list-top li a{color:#666;text-decoration:underline;}
+.free-teaser-list-top li:nth-last-child(1){border-bottom:none;}
+.free-teaser-list-top li h3{font-size:18px;font-weight:300;font-family:Helvetica;}
+.free-teaser-list-top li h3 .icon-ok{margin:0 30px 0 20px;font-size:14px;}
+.free-teaser-list-top li p{color:#666;padding:12px 0 0 64px;font-size:13px;line-height:21px;}
+.free-teaser-list-top .icon-ok{color:#357cf4;font-size:12px;}
+.free-teaser-xq{background:#f1f1f1;border:1px solid #ddd;border-top:none;float:left;width:100%;border-radius:0 0 3px 3px;
+padding:15px 20px 10px 20px;line-height:38px;font-size:15px;}
+.free-teaser-xq a{color:#222;}
+.free-title a{color:#fff;}
+.free-teaser-xq .icon-facebook-sign{color:#39559d;margin:0 0 0 10px;}
+.free-teaser-xq .fb-btn{color:#39559d;}
+.free-demo{margin:0 0 60px 0;float:left;width:100%;}
+.free-demo .tutorial-box{width:95%;height:auto;}
+.free-demo .carousel-control.right{text-align:center;padding:140px 0 0 80px}
+.free-demo .carousel-control.left{text-align:center;padding:140px 80px 0 0;}
+.free-teaser.free-teaser-en{font-family:Helvetica;}
+.free-teaser.free-teaser-en .free-teaser-list-top li h3{font-size:16px;}
