--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -61,7 +61,7 @@ header {font-family:Helvetica;
     width: 100%;
     height:85vh;
     background:url("../img/banner.png") no-repeat;
-    background-size:100%;float:left;
+    background-size:100%;float:left;margin-bottom:50px;
 }
 .title {
     -webkit-align-self: center;
