--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3080,6 +3080,7 @@ md-select-menu.md-default-theme md-content md-option:not([disabled]):focus, md-s
 .label-con{background:#f5f5f5;padding:0 20px 0 0;height:38px;line-height:36px;font-size:15px;font-weight:bold;border:1px #ededed solid;margin:0 -20px;}
 .label-con span{width:2px;float:left;display:block;height:38px;border-left:4px solid #457cd8;margin:-1px 20px 0 -1px;}
 .label-con .icon-chevron-down{float:right;margin-top:9px;color:#2770ea;}
+.label-con .icon-chevron-down.arrow-up{-webkit-transform: rotate(-180deg);-moz-transform: rotate(-180deg);transform: rotate(-180deg);}
 .label-con:hover .icon-chevron-down{margin-top:12px;}
 .cam-collapse-wrapper{margin-top:30px;}
 .cam-collapse-wrapper .col-sm-2{padding:0;}
