--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -700,8 +700,8 @@ md-content.cs-main-content{
 /*End Nav Style*/
 
 /*Start tabs Style*/
-md-content md-tabs{
-  padding:15px;
+.sudden-change md-content md-tabs {
+  padding: 15px 15px 0 15px;
 }
 .sudden-change, .sudden-change md-content {height: 100%;}
 .sudden-change md-tab-content,
