continue按钮隐藏动作延迟问题

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3439,3 +3439,4 @@ table.md-table tr.row-deleted td.md-cell {
   color: #333;
   padding-right: 10px;
 }
+.flow-continue.ng-hide { display: none !important;}
