优化report滑动卡顿

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -3417,6 +3417,7 @@ table.md-table tr.row-deleted td.md-cell {
 }
 .repeater-container tr .item-name a {
   border: 1px solid transparent;
+  position: relative;
 }
 .repeater-container tr:hover .item-name a {
   border: 1px solid;
@@ -3440,3 +3441,9 @@ table.md-table tr.row-deleted td.md-cell {
   padding-right: 10px;
 }
 .flow-continue.ng-hide { display: none !important;}
+.contextmenu-report > .context-menu-item > .context-menu-list {
+  margin: 0;
+  max-height: 500px;
+  overflow-y: auto;
+}
+.context-menu-item {padding: .2em 1em;width: 180px;}
