--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -659,6 +659,7 @@ table.md-table td.md-cell{
     border-left: 1px solid #eaeaea;
     border-top: none;font-size:12px;
 }
+table.md-table td.md-cell.tree-level-2 {padding-left: 25px !important;}
 table.md-table tbody{border-top:1px solid #ccc;}
 table.md-table tbody tr:hover {
   background: rgba(45, 168, 249, 0.06);
